--- a/src/styleSheets/StockNews.css
+++ b/src/styleSheets/StockNews.css
@@ -4,9 +4,21 @@
   height: 100%;
   margin-right: 50px;
 }
+.StockNewsWords {
+  margin: 0 auto;
+  width: 185px;
+  color: white;
+  /* display: inline-block; */
 
+}
+.StockNewsWords:hover {
+  color: #bf00ff;
+  font-weight: bold;
+}
 .news-div h4 {
   font-size: 20px;
+  /* margin: 0 auto;
+  width: 100px; */
 }
 .renderNews {
   display: flex;
@@ -51,12 +63,17 @@
   margin-top: 80px;
 }
 @media screen and (min-width: 305px) and (max-width: 1105px) {
+.news-div{
+  width: 95%;
+  margin: 0 auto;
+  /* transform: translateX(1%); */
+}
+  a {
+    width: 95vw;
+  }
   .renderNews {
     display: flex;
-    margin: 15px auto;
-    font-family: Helvetica, sans-serif;
-    box-shadow: 0 0 3px 3px #161616;
-    width: 95vw;
+    margin-left: 0;
     height: 70%;
     color: white;
   }
@@ -64,25 +81,45 @@
     width: 30vw;
     height: 100%;
   }
+  .render-news{
+    margin-left: 0;
+  }
   .news-render {
     display: inline-block;
     position: relative;
     margin-right: 0px;
     width: 95vw;
   }
-  .headline {
-    flex-wrap: wrap;
-    max-width: 300px;
-    margin-left: 0;
-    margin-top: 0;
+  .headline h4{
+    width: 170px;
+  }
+  .headline p {
+  width: 100px;
   }
   #published {
     height: 100px;
     width: 350px;
+    font-size: .8em;
     text-align: right;
     margin-right: 10px;
     margin-top: 80px;
   }
+}
+
+@media screen and (min-width: 605px) and (max-width: 1255px) {
+  .headline p{
+    font-size: 14px;
+    width: 200px;
+  }
+  #published {
+    font-size: 1em;
+}
+}
+@media screen and (min-width: 905px) and (max-width: 1255px) {
+
+  #published {
+    font-size: 14px;
+}
 }
 @media screen and (min-width: 1105px) and (max-width: 1255px) {
   .renderNews {
